--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background: url(https://picsum.photos/1600/900);
+    background:#cecad1;
+    /* background: url(https://picsum.photos/1600/900); */
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -18,8 +19,9 @@ body {
 
 .container {
     padding: 20px;
-    background-color: #ffffff;
+    background-color: #e8e3ec;
     border-radius: 5px;
+    border: 2px solid #c0a2dd;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,8 +61,22 @@ button:hover {
     background-color: #6a4d85;
 }
 
+#rock:hover {
+    border: solid 2px #9b4fe2;
+}
+#paper:hover {
+    border: solid 2px #c0a2dd;
+}
+#scissors:hover {
+    border: solid 2px #6a4d85;
+}
+
+
 p {
     font-weight: 700;
+    color: #0a0a0a;
+    text-shadow: #f14e4e 2px 3px 2px;
+    text-transform: uppercase;
 }
 
 .result-playr {
